fix: set white-space to `pre-wrap` for code/pre, etc

--- a/web/static/css/app.css.scss
+++ b/web/static/css/app.css.scss
@@ -236,6 +236,11 @@ article.unpublished {
   font-weight:normal;
 }
 
+code, kbd, pre, samp {
+  white-space:pre;
+  white-space:pre-wrap;
+}
+
 
 @media only screen and (min-width: 30em) {
   .site-header { padding:1em; }
